# 2048

./: .gitmodules  2048.cpp  2048.h  CMakeLists.txt  README.md  main.cpp  menu.h  window.cpp  window.h
interface/: Layout.h  ScoreWindow.h  WindowGrid.cpp  WindowGrid.h  window.cpp  window.h
